--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons-animated": "^1.0.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
